modifiche sezione Progetto e bibliografia

--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,27 @@
 \usepackage{booktabs}
 \DeclareMathOperator{\Tr}{Tr}
 
+% paper GAN
+\usepackage{bm}
+%\usepackage{hyperref}
+\usepackage{url}
+\usepackage{amssymb}
+\usepackage{amsthm}
+\usepackage[numbers]{natbib}
+\usepackage{enumitem}
+\usepackage{amsmath}  % required if you use \overset
+%\documentstyle[nips14submit_09,times,art10]{article} % For LaTeX 2.09
+\usepackage{array}
+\newtheorem{proposition}{Proposition}
+\newtheorem{lemma}{Lemma}
+\newtheorem{corollary}{Corollary}
+\newtheorem{theorem}{Theorem}
+\newtheorem*{thmnonumber}{Theorem}
+% For algorithms
+\usepackage{algorithm}
+\usepackage{algorithmic}
+%%%%%%%%%%%%
+
 % custom colors
 \usepackage{color}
 \definecolor{light-gray}{gray}{0.96}
