--- a/sections/implementazione.tex
+++ b/sections/implementazione.tex
@@ -2,41 +2,4 @@
 \label{implementazione}
 
 
-
-\section{Classificatore Random Forest}
-\label{imprandomforest}
-\todo{ottenere i parametri di randomforest del miglior risultato}
-\todo{differenze pratiche tra RF, SVM, GNB}
-
-\subsection{Input}
-\label{imprandomforestinput}
-
-\subsection{Composizione Interna}
-\label{imprandomforestinterno}
-
-\subsection{Output}
-\label{imprandomforestoutput}
-
-\section{Classificatore Neurale}
-\label{impclassificatorenn}
-
-\subsection{Input}
-\label{impclassificatorenninput}
-
-\subsection{Composizione Interna}
-\label{impclassificatorenninterno}
-
-\subsection{Output}
-\label{impclassificatorennoutput}
-
-\section{Realizzazione Adversarial Learning}
-\label{impadv}
-
-\subsection{Input}
-\label{impadvinput}
-
-\subsection{Composizione Interna}
-\label{impadvinterno}
-
-\subsection{Output}
-\label{advoutput}
+\todo{parlare del pretraining}
