--- a/sections/references.bib
+++ b/sections/references.bib
@@ -237,3 +237,10 @@ howpublished = {\url{https://commons.wikimedia.org/w/index.php?curid=4310325}}
   Year = {1998},
   ISBN = {0262193981},
 }
+
+@misc{gan,
+Author = {Ian J. Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
+Title = {Generative Adversarial Networks},
+Year = {2014},
+Eprint = {arXiv:1406.2661},
+}
