modifiche sezione Progetto e bibliografia

--- a/sections/progetto.tex
+++ b/sections/progetto.tex
@@ -1,7 +1,13 @@
 \chapter{Progetto}
 \label{progetto}
 
-In questo capitolo si propone il progetto realizzato per raggiungere gli obiettivi preposti: si è partiti dalla realizzazione di un classificatore basato su \textit{Random Forest} per poi passare ad una versione più elaborata, utilizzando un \textit{Multilayer Perceptron}. Il passo successivo ha riguardato la creazione di una \textit{Generative Adversarial Network} a partire da un \textit{Autoencoder} in grado di rafforzare un classificatore generando domini sintetici
+In questo capitolo si propone il progetto realizzato per raggiungere gli obiettivi preposti: la realizzazione di un classificatore basato su \textit{Random Forest} per poi passare ad una versione più elaborata, utilizzando un \textit{Multilayer Perceptron}. Il passo successivo ha riguardato la creazione di una \textit{Generative Adversarial Network} a partire da un \textit{Autoencoder} in grado di rafforzare la performance del classificatore.
+
+\begin{figure}[htb]
+    \centering
+	\input{figures/introduction.tex}
+\label{fig:intro}
+\end{figure}
 
 
 \section{Classificatore Random Forest}
