--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{tikz}
 \usepackage{tikzscale}
-\usetikzlibrary{shapes,arrows,fit,calc,positioning}
+\usetikzlibrary{shapes,arrows,fit,calc,positioning, snakes}
 \usetikzlibrary{backgrounds}
 
 % math packages
