modifiche sezione Progetto e bibliografia

--- a/figures/autoencoder_general.tex
+++ b/figures/autoencoder_general.tex
@@ -1,6 +1,13 @@
+%\documentclass{standalone}
+%\usepackage{tikz}
+%
+%\usetikzlibrary{shapes,arrows,fit,calc,positioning}
+
 \tikzstyle{box} = [draw, rectangle, fill=white, thick, node distance=7em, text centered, minimum height=15em, minimum width=2.4em]
 \tikzstyle{container} = [draw, rectangle, dashed, inner sep=2em]
 \tikzstyle{line} = [draw, dashed, -latex']
+%\begin{document}
+
 \resizebox{10cm}{!}{%
 \begin{tikzpicture}[auto]
 	\node[box](in){$x$};
@@ -34,3 +41,4 @@
 	
 \end{tikzpicture}
 }
+%\end{document}
