--- a/sections/references.bib
+++ b/sections/references.bib
@@ -244,3 +244,10 @@ Title = {Generative Adversarial Networks},
 Year = {2014},
 Eprint = {arXiv:1406.2661},
 }
+
+@misc{1606.03498,
+Author = {Tim Salimans and Ian Goodfellow and Wojciech Zaremba and Vicki Cheung and Alec Radford and Xi Chen},
+Title = {Improved Techniques for Training GANs},
+Year = {2016},
+Eprint = {arXiv:1606.03498},
+}
